# Learning_databricks

./: .dbsql-formatter-config.json  .gitignore  .pre-commit-config.yaml  README.md  README_.md  databricks.yml  pyproject.toml  spark_test.py
examples/: 001_execution_test.ipynb  001_execution_test.py  002_asset_bundles_job_test.md  003_pylint.md  003_pylint_check.ipynb  005_isort_check.py
resources/: data_pipeline.job.yml  data_pipeline.pipeline.yml
src/: notebook.ipynb  pipeline.ipynb
tests/: main_test.py
warehouse/: activate.bat  pyproject.toml  sample.sql  setup_databricks.bat
warehouse/examples/: 001_execution_test.ipynb  001_setup.md  002_asset_bundles_job_test.md  003_pylint.md  003_pylint_check.ipynb  003_pylint_check.py  006_ruff_check.ipynb  006_ruff_check.py  100_databricks_tool_matrix.md.backup  README.md
