[project]
name = "databricks-project"
version = "0.1.0"
requires-python = ">=3.10"


# 本番環境の依存関係（Databricks Runtimeにデプロイされるもの）
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "databricks-connect==16.1.*",
    "databricks-sdk>=0.20.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
    # https://github.com/databrickslabs/pylint-plugin?tab=readme-ov-file#installation-as-pylint-plugin
    "databricks-labs-pylint"
]

ci = [
    "ruff>=0.3.0",
    "pytest",  # Option
]

[tool.pylint.MASTER]
load-plugins = ["databricks.labs.pylint.all"]

[tool.ruff]
line-length = 127
target-version = "py311"

[tool.ruff.lint]
select = [
  "F", # Pyflakes
  "E", # Pycodestyle Error
  "W", # Pycodestyle Warning
  "I",  # isort
  "N"   # pep8-naming
]
ignore = ["F821"]  # NOTE: there are built-in variables

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
